@@ -523,6 +523,7 @@
 (si::defun-builtin dump-image-path ())
 (si::defun-builtin system-root ())
 (si::defun-builtin getenv (variable))
+(si::defun-builtin putenv (variable))
 (si::defun-builtin make-chunk (type size &optional source offset))
 (si::defun-builtin make-string-chunk (string))
 (si::defun-builtin chunk-data (chunk))
