@@ -1,3 +1,15 @@
+2010-09-11  NANRI Masaoki  <southly@gmail.com>
+
+	* src : add si:putenv.
+	si:putenv を追加。
+	via http://d.hatena.ne.jp/miyamuko/20100910/xyzzy_putenv
+
+2010-08-31  NANRI Masaoki  <southly@gmail.com>
+
+	* src : fix call-process.
+	call-processの標準入力・標準出力等の指定がうまく設定されない現象がおき
+	ていたのを修正。
+
 2010-07-14  NANRI Masaoki  <southly@gmail.com>
 
 	* src : fix format "~T".
